native-resources/nginx-ingress-controller/test-app/hello-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  namespace: dev
spec:
  selector:
    matchLabels:
      app: hello
  replicas: 3
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello
          image: 'gcr.io/google-samples/hello-app:2.0'
