native-resources/nginx-ingress-controller/test-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: '<some-domain-name'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: hello-service
                port:
                  number: 80
